modify auth and add migration schema db

--- a/resources/lang/en/auth.json
+++ b/resources/lang/en/auth.json
@@ -1,4 +1,7 @@
 {
     "login": "Login successfully",
-    "register": "Register user successfully"
+    "register": "Register user successfully",
+    "invalid_login": "Invalid username or password",
+    "logout": "Logout successfully",
+    "refresh_token": "Token penyegaran berhasil dibuat"
 }
