--- a/resources/lang/id/auth.json
+++ b/resources/lang/id/auth.json
@@ -1,4 +1,7 @@
 {
-    "login": "Berhasil login",
-    "register": "Daftarkan pengguna berhasil"
+    "login": "Berhasil masuk",
+    "register": "Daftarkan pengguna berhasil",
+    "invalid_login": "nama pengguna atau kata sandi salah",
+    "logout": "Berhasil keluar",
+    "refresh_token": "Token penyegaran berhasil dibuat"
 }
